--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,29 +1,52 @@
-<input type="text" [formControl]="search" placeholder="Search Joke" />
-<ng-container *ngIf="result$ | async as result">
-  <h3>Total Jokes: {{ result.Title }}</h3>
-  <ul>
-    <li>{{ result.Title }}</li>
-    <li>
-      {{ result.Year | yearAgo }}
-    </li>
-    <li>
-      {{ result.Actors | extractNames }}
-    </li>
+<!-- hero area start -->
+<section class="hero-area" id="home">
+  <input type="text" [formControl]="search" placeholder="Search Joke" />
+  <button routerLink="moviesList">Movies Link</button>
+  <ng-container *ngIf="result$ | async as result">
+    <button (click)="addToList(result)">Add to list</button>
+    <div class="container">
+      <div class="hero-area-slider">
+        <div class="row hero-area-slide">
+          <div class="col-lg-6 col-md-5">
+            <div class="hero-area-content">
+              <img [src]="result.Poster" alt="about" />
+            </div>
+          </div>
 
-    <li>{{ result.Country }}</li>
-  </ul>
-</ng-container>
-<ng-container *ngIf="currencies$ | async as currency">
-  <p>{{ currency }}</p>
-</ng-container>
+          <div class="col-lg-6 col-md-7">
+            <div class="hero-area-content pr-50">
+              <h2>{{ result.Title }}</h2>
+              <div class="review">
+                <h4>{{ result.Year | yearAgo }}</h4>
+              </div>
+              <h3>{{ result.Actors | extractNames }}</h3>
 
-<ng-container *ngIf="countries$ | async | lowercase as countryCode">
-  <div *ngIf="countryCode | commaSeparatedToArray as codes">
-    <div *ngFor="let item of codes">
-      <img
-        [src]="'https://flagpedia.net/data/flags/icon/36x27/' + item + '.png'"
-        alt=""
-      />
+              <div class="slide-trailor">
+                <a class="theme-btn theme-btn2" href="#"
+                  ><i class="icofont icofont-play"></i> {{ result.Country }}</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-</ng-container>
+  </ng-container>
+
+  <ng-container *ngIf="currencies$ | async as currency">
+    <p>{{ currency }}</p>
+  </ng-container>
+
+  <ng-container *ngIf="countries$ | async | lowercase as countryCode">
+    <div *ngIf="countryCode | commaSeparatedToArray as codes">
+      <div *ngFor="let item of codes">
+        <img
+          [src]="'https://flagpedia.net/data/flags/icon/36x27/' + item + '.png'"
+          alt=""
+        />
+      </div>
+    </div>
+  </ng-container>
+</section>
+
+<!-- hero area end -->
