--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -5,6 +5,7 @@
   <div class="portfolio-menu">
     <ul>
       <button routerLink="moviesList" id="movieList">My Movie List</button>
+      <button routerLink="addMovie" id="movieList">Go to Form Assignment</button>
     </ul>
   </div>
 
